--- a/src/components/searchBar/searchBar.component.css
+++ b/src/components/searchBar/searchBar.component.css
@@ -5,6 +5,7 @@
   border: 1px solid gray;
   align-self: center;
   right: 28px;
+  position: relative;
 }
 
 .dropdown:empty {
@@ -19,4 +20,11 @@
 .searchForm {
   display: flex;
   flex-direction: column;
+}
+
+.searchBtn:hover {
+  background-color: #ff00008a !important;
+}
+.showBtn:hover {
+  background-color: #ffdd0088 !important;
 }
