--- a/src/components/miniCard/miniCard.component.css
+++ b/src/components/miniCard/miniCard.component.css
@@ -23,6 +23,7 @@ body {
   border-radius: calc(var(--curve) * 1px);
   overflow: hidden;
   text-decoration: none;
+  /* box-shadow: none !important; */
 }
 .img-hover-zoom {
   height: 300px;
@@ -74,7 +75,6 @@ body {
   left: 0;
   right: 0;
   z-index: 1;
-  /* border-radius: calc(var(--curve) * 1px); */
   background-color: var(--surface-color);
   transform: translateY(100%);
   transition: 0.2s ease-in-out;
