--- a/src/components/footer/footer.component.css
+++ b/src/components/footer/footer.component.css
@@ -10,3 +10,8 @@
 .floatContact {
   padding-right: 20px !important;
 }
+
+.btn-floating {
+  width: 3rem !important;
+  height: 3rem !important;
+}
